--- a/templates/owlHome.html.twig
+++ b/templates/owlHome.html.twig
@@ -227,116 +227,7 @@
 
     {{ parent() }}
 
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
-    </script>
-    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-
-
-    <script>
-
-        $("#falseButton").on("click",function(){
-            nameNL = $("#mce-FNAME").val();
-            mailNL = $("#mce-EMAIL").val();
-            owlPropectNLRegistred(nameNL, mailNL);
-            $("#mc-embedded-subscribe").trigger("click");
-
-        });
-
-
-
-        function owlPropectNLRegistred(nameNL, mailNL) {
-            console.log(nameNL +" - "+ mailNL)
-            jQuery.ajax({
-                url: "owlPropectNLRegistred",
-                type: "POST",
-                data:
-                    {
-
-                        nameNL: nameNL,
-                        mailNL: mailNL,
-                    },
-                dataType: 'json',
-
-                // Retourne les tableaux :actCategory, actSubcategory, activity, actLocation et regAdhClass
-
-                success: function (response) {
-
-                    console.log(response);
-                },
-
-                error: function () {
-                    dataResponse = [];
-                    console.log("raté!");
-                }
-
-            });
-        }
-
-
-        var cardId1 = "";
-        var cardId2 = "";
-        var gerard = "";
-        var thisCard = "";
-
-        $(".gameCard").on("click", function(){
-
-            if(gerard == 1){
-                $(".flipped").removeClass("flipped")
-            }
-            gerard = 0;
-            $(this).addClass("flipped");
-
-            if(cardId1==""){
-                cardId1 = $(this).parent().attr("id").substr(1)
-            }
-            else
-            {
-                cardId2 = $(this).parent().attr("id").substr(1)
-            }
-
-            if(cardId1 != "" && cardId2 != ""){
-                console.log("jeu complet");
-
-                if(cardId1 == cardId2){
-                    $(".flipped").removeClass("flipped").addClass("flippedOk");
-
-                    if(cardId1 == "red"){
-                        $("#cardText").text("Quand ça marche pas ce projet... on voit rouge !")
-                    }
-                    if(cardId1 == "blue") {
-                        $("#cardText").text("Ca fait mal, des fois les bleus")
-
-                    }
-                    if(cardId1 == "green") {
-                        $("#cardText").text("Oh oui, se mettre au vert... le rêve !")
-
-                    }
-                    if(cardId1 == "pink") {
-                        $("#cardText").text("Du rose... rien que pour les filles !")
-
-                    }
-                    if(cardId1 == "yellow"){
-                        $("#cardText").text("C'est joli le jaune... c'est la couleur du soleil")
-
-
-                    }
-                    if(cardId1 == "owl") {
-                        $("#cardText").text("Mettez un hibou dans votre site !")
-
-                    }
-
-                }
-                else {
-                    gerard=1;
-                }
-                cardId1="";
-                cardId2="";
-            }
-
-        });
-
-</script>
-
-
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script src="{{ asset('assets/js/Nl.js') }}"></script>
 
 {% endblock %}
