--- a/templates/owlReferences.html.twig
+++ b/templates/owlReferences.html.twig
@@ -226,21 +226,6 @@
 
     {{ parent() }}
 
-    <script>
-    $("#colorblindButton").click(function(){
-        $("#photo").attr('src', '../assets/img/siteDalt.png');
-    });
-    $("#dyslexicButton").click(function(){
-        $("#photo").attr('src', '../assets/img/siteDys.png');
-    });
-    $("#sightProblemButton").click(function(){
-        $("#photo").attr('src', '../assets/img/sitePark.png');
-    });
-    $("#normalButton").click(function(){
-        $("#photo").attr('src', '../assets/img/siteBase.png');
-    });
-    </script>
-
-
+    <script src="{{ asset('assets/js/references.js') }}"></script>
 
 {% endblock %}
