--- a/templates/lp2.html.twig
+++ b/templates/lp2.html.twig
@@ -1,4 +1,4 @@
-{% extends '//base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 
 {% block title %}Landing page{% endblock %}
@@ -19,7 +19,7 @@
                 <div class="col-md-3">
                     <a  href={{ path('index') }}><img alt="" src="../assets/img/logoBlack.png"></a>
                 </div>
-                <div class="col-md-6" style="padding-top:120px;">
+                <div class="col-md-6 col-sm-9 col-xs-12" style="padding-top:120px;">
 
                     <h1>Suivez-nous !</h1>
 
@@ -84,9 +84,9 @@
                         {#</div>#}
                     </div>
                 </div>
-                <div class="col-md-3" style="text-align:center;">
-                    <a  href={{ path('index') }}><img alt="" src="../assets/img/lp.png" style="width:200px;"/></a>
-                </div>
+                {#<div class="col-md-3" style="text-align:center;">#}
+                    {#<a  href={{ path('index') }}><img alt="" src="../assets/img/lp.png" style="width:200px;"/></a>#}
+                {#</div>#}
             </div>
         </div>
         {#</div>#}
@@ -125,56 +125,65 @@
 {% endblock %}
 
 
+
 {% block javascripts %}
 
-    {{ parent() }}
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script src="{{ asset('assets/js/Nl.js') }}"></script>
 
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
-</script>
-<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <script>
+
+        $( ".link" ).on( "mouseover", function(){
+            $(this).css('cursor','pointer')});
+
+        $( ".content" ).on( "mouseover", ".link", function(){
+            $(this).css('cursor','pointer')});
+
+    </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{ asset('assets/js/anim.js') }}"></script>
+
+    <!-- Load the JavaScript API client and Sign-in library. -->
+    <script src="https://apis.google.com/js/client:platform.js"></script>
+    <script src="https://www.google-analytics.com/analytics.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131485415-2"></script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-131485415-2');
+    </script>
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-N9224JP');</script>
+    <!-- End Google Tag Manager -->
 
 
-<script>
 
-    $("#falseButton").on("click",function(){
-        nameNL = $("#mce-FNAME").val();
-        mailNL = $("#mce-EMAIL").val();
-        owlPropectNLRegistred(nameNL, mailNL);
-        $("#mc-embedded-subscribe").trigger("click");
-
-    });
-
-
-
-    function owlPropectNLRegistred(nameNL, mailNL) {
-        console.log(nameNL +" - "+ mailNL)
-        jQuery.ajax({
-            url: "owlPropectNLRegistred",
-            type: "POST",
-            data:
-                {
-
-                    nameNL: nameNL,
-                    mailNL: mailNL,
-                },
-            dataType: 'json',
-
-            // Retourne les tableaux :actCategory, actSubcategory, activity, actLocation et regAdhClass
-
-            success: function (response) {
-
-                console.log(response);
-            },
-
-            error: function () {
-                dataResponse = [];
-                console.log("raté!");
-            }
-
-        });
-    }
-</script>
-    {% endblock %}
-
+{% endblock %}
 
 
